Fixed double scrollbars.
FEE-691

--- a/src/global-styles/components/_dropdown.scss
+++ b/src/global-styles/components/_dropdown.scss
@@ -58,9 +58,7 @@ $dropdown-button-gradient-active: linear-gradient(to bottom, #c8c8c8, #f4f4f4);
   }
 
   & ul.dropdown-menu {
-    max-height: 267px;
     overflow-x: hidden;
     overflow-y: auto;
-
   }
 }
